# Todo-App

./: CMakeLists.txt  README.md
TaskCompounder/: CMakeLists.txt
TaskCompounder/include/: Task.h  TodoCore.h
TaskCompounder/src/: Task.cpp  TodoCore.cpp
include/: Calendar.h  Task.h  TodoCore.h
src/: Calendar.cpp  Task.cpp  TodoCore.cpp  main.cpp
src/linux/: client.cpp
